--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,18 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Dimos Tsouros"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Dimos Tsouros"
+description              : &description "I am a researcher in AI, with my research interests including, but not being limited to, the following:
+Constraint Programming, Machine Learning, Artificial Intelligence, Combinatorial Optimization, Bioinformatics.
+
+I currently am a Post-Doc researcher at KU Leuven, in the Declarative Languages and Artificial Intelligence (DTAI) section of Computer Science. 
+
+I studied Informatics and Telecommunications Engineering at the University of Western Macedonia, Kozani, Greece. After receiving my diploma, I continued doing my Ph.D. on the integration of Constraint Programming and Machine Learning for assisting in the modeling process using learning techniques. I received my Ph.D. from the Department of Electrical and Computer Engineering of the University of Western Macedonia, in 2021. During my Ph.D., I worked as a researcher on several research projects."
+url                      : https://dimostsouros.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "Dimosts/dimostsouros.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,15 +85,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
-  employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  name             : "Dimos Tsouros"
+  avatar           : "picture_tsouros2.png"
+  bio              : "Post-Doc Researcher"
+  location         : "Leuven, Belgium"
+  employer         : "KU Leuven"
+  pubmed           : 
+  googlescholar    : "https://scholar.google.gr/citations?user=qFrNdPAAAAAJ&hl"
+  email            : "dimos.tsouros@kuleuven.be"
+  researchgate     :  "https://www.researchgate.net/profile/Dimos-Tsouros"
   uri              :
   bitbucket        :
   codepen          :
@@ -96,20 +101,20 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "Dimosts"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "dimos-tsouros-5a1673106"
+  orcid            : "https://orcid.org/0000-0002-3040-0959"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "dimos_ts"
   vine             :
   weibo            :
   xing             :
