change in linkedin

--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "dimos-tsouros-5a1673106"
+  linkedin         : "dimos-tsouros"
   orcid            : "https://orcid.org/0000-0002-3040-0959"
   pinterest        :
   soundcloud       :
